# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xYX4LZ5gTJTduqqbuf61wbex2VKLSHx7qgFJGIAUafAM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1SIaodNns7icictzGteMm_J8dYL5jPWWfQ1DcPgNZEm0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1fgNsUJJ2LffL-XI596OMuB-271iaxWWanEa5UKTQHfs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xt_Wtpy9ZgQJj4dDIXbJbG1vxMIMS5xkG6_pd8Z2v9Hg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1TxEc1TYxte-LvrYwmBrVv-o9GTEgKA_EINltIcItKTs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1LDIsDIIHzkSo_Wm6KH5EyPuE49nyxtcjG5cYMcQ3P0I=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT12PXQ_U-NdvPOWRKlbRBANdBkejUVMu5TZ4O_Yw3PIvk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT25FfZ2KM54-GJnlvruoQShjMjeTw1PX-lZ_I4Nb74Pg0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT27JlvRwuBsZf3R6NkSvbpoz5ySRTG0b86plqhePQklQo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2AnqEMAL6citvVfaCv4s1gxs3KgjSwvwojUqbTFrI508=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2BivQGHkNWtGZbhdHtrI58aFN2TeSzSUxAZL_iZqhRu4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2FVNyHLKgpJDPsH1kgQmQ3gbvPfg5Y21IFoYzQRTmou0=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT15zQ45LuUdb5z-geXzjgJf-ruVScxDIwFp0R5l1U5PDo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT18d_YaLwDuRPnZ9R6zsMVh4Jfi74bad1g1EN_DxCuvZU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT19kQa5OjM8Hp1YFCAiWkat8vTsbTPQLIz_Is1P9M9CZM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1GEs5iLCZn7zEXv-LPHN1YtUGFOe1dzsRUjv8_QWZr8o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1Jhf6Fu9atn82iiaycseJVrq_Wfhiw6rTe5Jm_T3EWfs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1imlamZtaVSvM-m0zZ-A8s4iO8gUiaA1_OcsHVHVgdYg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1DaVgyKtVEgeSqfKOsQP8Y3AJsMvX6KBFUjAuE51kVP8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x647_c95hi2dbVcBVlmV_yjLkp0z7IumSv3ewhEZ-g2kFo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64WnC0-ruxF6SNw_rfPlmghacMbstLdPMOfH7DEEThCuM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x13PrjfYCPm0YoXwN45xs2wNiZ6hP1WiMOpIsu-3BG2oU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x161CXrhHL-e6tFGS_LQTub_IQuXHerxQqWlWwoyNJ4Hw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1BtQ9SBlslCruMKcXfYASxWqN1vD7zGiQi3-bv4VdPsw=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2cAR911Ttsi9oasRHwnGeMWkCJ1zz3C014Y70Xwk_GSk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2vqMN1rldSYM-8ct67ZdSpJ75rolIHv2gCK2b_ML6UiA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3Md66AbHJ3LcxYv9cnirmSTBPju1hJXEDHW8kp3mO4ao=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32Ug0-0oGRERyLwpEPXjaqAmKoOmDuFdjTz2lgLxriR7w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32p2pgY7S3Qe9ToOlitBSsUwtYcP8J5M5Bg8MbSZ-mPwI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32vjYRKPjpp9gZ0XW57zjpQuqvP1iYPRcW677obZohWi0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI324Zx-2OGOtx8UlYGLbTwaSq_KJE4nTAPDRz7jpglX8G4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32x8MZkPXzMmgzxaN5pLRnpdgei7ZMtRSqLMxl5sRouHc0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32x9fGrm7dPDxmDDAzZ6BQUOlcaE54DrpmmTrju_qW86Ac=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT10zBqkPQxhleD6M6M-16fpl_-yVersoa9xJPkuBpkk_8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT13aR5xpI2J7xh_l0NshJr1LjcwL-ofSkvlRGkp0K06DQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT17ap8kI-Fl3f0wbv0Z9TugnNdHcJCJIs7xB13re5ACOs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT17eVek2PckP6CU_0vKprTHKLopWwyBleWebqFLD7qqmE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT17kumpc6mkCYgTfyCoXHd5Izu6ppLcPhWD5yt4WJ7yLw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1A7O7A0CYaU2w3pD8JFaVt9DsXrIegkuVDb2YeYhOhFI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1E3s8HYU1_ecu-W2Kd3NBd_8CgVC-8jvFviv-NBYvtdg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1XMPKKqxGyd0AJNUxnU4Qb0d2TSI_mUJzTK9k_epbkQo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3C12NyXs8WFzvujPZF8exWlzMHW0zscHx4Fks5O_gZaY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3rTSLTd1VQfoBA53cbYveVW4k6gdUhFDa3WQx0SqUeVQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT40ktQimE1jOvbaSW570A8aVX77IIfCtj7l9EIrwUYaL8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4boFXtbmLa2JA2hThlhOLEOZq8sG-s3GDVQgsQztXzWE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16Sxucc8WWPI30QVdtkrWnCWgH-m_8nf1Av55ISJKV6AM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16lgvKnZfOJnMgZ306ntvchd4jbSa_7PI6Z1dOT00nsg8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16IW_yAdWlOKiQRIm9FD8uaccIdeEt9pJzdO-Zxgzkt3c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16Ow2ZKp4-DdZqV6W9AC_lH9k3wi_aixup5cpQWzUlJyo=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16FEJ1TvTlLOVLOmTu0OKwIAI0Vs_ICp99Opq77nF8z1g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16pGWL6I47evklvPJdro6j3jLw1eHn4er8NWrRQeV9rf4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x169czpSWfOQs1fMo0OqjHoNM6oZsKmuP7_Vz0IBvAL2TQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x161jRoymYIVhjBUyl0Br--qQHDW8Iv1o0avreQvvmzQbQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x1607EGsRk6tUKvjwJpavNXaRITGbGQG6oIeOZa0pQGIWE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16oxL-5d_N0-Sn28TuCYZNmCC3A7lnmO7NGs1p_ffOwdA=',
      'err': 0,
    }),
  ])
# ---
